using submodules instead of folders

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ios-video-upload"]
 	path = ios-video-upload
 	url = git@github.com:randomor/ios-video-upload.git
+[submodule "sinatra-video-upload"]
+	path = sinatra-video-upload
+	url = git@github.com:randomor/sinatra-video-upload.git
